# TetrisSRS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/core/: Application.hpp
include/game/: Bag.hpp  GameState.hpp  Kicks.hpp  Logic.hpp  Pieces.hpp  Rotate.hpp
include/render/: Colors.hpp  Hud.hpp  PlayFieldRenderer.hpp
src/core/: Application.cpp  main.cpp
src/render/: Hud.cpp  PlayFieldRenderer.cpp
tests/: smoketest.cpp
